# Project-Bible

./: .gitignore  README.md  pb.cmd
.github/workflows/: frontend-cli-ci.yml  post-java-springboot-gradle-mysql-ci.yml  post-java-springboot-gradle-postgresql-ci.yml  post-java-springboot-maven-mysql-ci.yml  post-java-springboot-maven-postgresql-ci.yml  post-typescript-nestjs-npm-mysql-ci.yml  post-typescript-nestjs-npm-postgresql-ci.yml  shop-java-springboot-gradle-mysql-ci.yml  shop-java-springboot-gradle-postgresql-ci.yml  shop-java-springboot-maven-mysql-ci.yml  shop-java-springboot-maven-postgresql-ci.yml  shop-typescript-nestjs-npm-mysql-ci.yml  shop-typescript-nestjs-npm-postgresql-ci.yml
Database/docker/: .env  .env.example  docker-compose.yml
Document/: README.md
Document/.code-convention/: convention.md  feature-number-example.md  refactor-number-example.md
Document/cli/: 01_command-reference.md  02_setup-and-target-registration.md  03_runbook.md  README.md
Document/post/: 01_requirements.md  02_erd.md  03_api-specification.md  04_language.md  05_test-specification.md  06_ci-specification.md  07_folder-java.md  07_folder-typescript.md
Tools/cli/: README.md  pyproject.toml
Tools/cli/scripts/: verify_backend_matrix.ps1
Tools/cli/src/pbcli/: __init__.py  gui.py  main.py  models.py  registry.py  runtime.py  services.py
Tools/cli/src/pbcli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
Tools/cli/src/pbcli/commands/: __init__.py
Tools/cli/src/pbcli/config/: __init__.py  projects.yaml
Tools/cli/tests/: __init__.py
(+1068 files in other folders)
